引入今日诗词

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -200,6 +200,10 @@ layout: default
                     {% endfor %}
                 </ul>
                 {% endif %}
+                <!-- 每日一句：今日诗词  -->
+		  <span id="jinrishici-sentence">正在加载今日诗词....</span>
+<script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
+  
                 <!-- 备案 record -->
                  {% if site.record %}
                 <hr>
