--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -201,8 +201,10 @@ layout: default
                 </ul>
                 {% endif %}
                 <!-- 每日一句：今日诗词  -->
-		  <span id="jinrishici-sentence">正在加载今日诗词....</span>
-<script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
+		<hr/>
+		<h5>每日一句：今日诗词 </h5>
+		<span id="jinrishici-sentence">正在加载今日诗词....</span>
+                <script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
   
                 <!-- 备案 record -->
                  {% if site.record %}
